Item CRUD API initial implementation